--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-react",
+  "name": "wsantlx1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,7 +12,7 @@
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "homepage": "https://wsantl.github.io/portfolio-react"
+    "homepage": "https://wsantl.github.io/wsantlx1"
   },
   "scripts": {
     "start": "react-scripts start",
